--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 <!--contact me section-->
-<section id="Contact"
+<section id="Contact">
 <form id="contact-form">
   <div class="form-group">
     <label for="name">Name:</label>
