--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaylene's Portfolio</title>
     <link rel="icon" type="image/x-icon" href="photos\alphabet-6481080.png">
-    <link href="/css/style.css" rel="stylesheet" type="text/css">
+    <link href="resources\css\style.css" rel="stylesheet" type="text/css">
     <script src="/resources/script.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
@@ -19,7 +19,7 @@
         <li><a href="#home-header">Home</a></li>
         <li><a href="#about">About Me</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact-form">Contact</a></li>
     </ul>
 </nav>
 
@@ -37,7 +37,7 @@
   <section id="about">
     <h2 class="spin-on-scroll">About Me</h2>
     <div style="text-align: left; display: inline-block; font-size: 18px;">
-        <img id="my-image" src="photos\OIP (1).jfif" style="float: left; margin-right: 20px;">
+        <img id="my-image" src="photos\wave-hover-me-800x800.png" style="float: left; margin-right: 20px;">
         <p style="margin-bottom: 10px;"><strong>Hi there, I'm a detail-oriented problem solver and front-end developer</strong> with over 460 hours of training and experience developing Java applications. I'm a self-taught coding bootcamp student with a passion for creating scalable web applications and working across the full stack. My technical skills include <span bold style="color: darkorchid;">Java, JavaScript, HTML, CSS, Spring Boot,</span> and more.</p>
         <ul style="margin-bottom: 10px;">
             <li><strong>Self-starter:</strong> I enjoy persisting in activities and processes, continually growing my skill set while contributing to positive outcomes and making people richer, smarter, and happier.</li>
@@ -88,7 +88,7 @@
 
 
 <!--contact me section-->
-<section id="Contact">
+<section id="contact">
 <form id="contact-form">
   <div class="form-group">
     <label for="name">Name:</label>
