--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Jaylene's Portfolio</title>
     <link rel="icon" type="image/x-icon" href="photos\alphabet-6481080.png">
     <link href="resources\css\style.css" rel="stylesheet" type="text/css">
-    <script src="/resources/script.js" defer></script>
+    <script src="resources\script.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 </head>
